--- a/InternetBanking/PRESENTACION/Views/Cliente/Tarjeta.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/Tarjeta.cshtml
@@ -13,3 +13,4 @@
 <a class="btn btn-primary" href="/Cliente/Inicio">INICIO</a>
 <a class="btn btn-primary" href="/Cliente/ConsumoTarjeta">Consumir</a>
 <a class="btn btn-primary" href="/Cliente/AvanceEfectivo">Transferir</a>
+<a class="btn btn-primary" href="/Cliente/AvanceEfectivo">PagarTarjeta</a>
