--- a/InternetBanking/PRESENTACION/Views/Cliente/Cliente.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/Cliente.cshtml
@@ -19,7 +19,7 @@
     <input type="text" class="form-control" name="email" aria-label="Large" aria-describedby="inputGroup-sizing-lg" placeholder="$ @ViewBag.saldo DOP" readonly>
 </div>
 <br />
-<button type="button" class="btn btn-outline-success" href="/Cliente/Historial">Historial</button><br />
-<button type="button" class="btn btn-outline-warning" href="/Cliente/TransferenciaCuenta">Transferir</button><br />
-<button type="button" class="btn btn-outline-primary" href="/Cliente/Depostio">Depositar</button><br />
-<button type="button" class="btn btn-outline-danger" href="/Cliente/Inicio">Atras</button>
+<button type="button" class="btn btn-outline-success text-dark" href="/Cliente/Historial">Historial</button><br />
+<button type="button" class="btn btn-outline-warning text-dark" href="/Cliente/TransferenciaCuenta">Transferir</button><br />
+<button type="button" class="btn btn-outline-primary text-dark" href="/Cliente/Depostio">Depositar</button><br />
+<button type="button" class="btn btn-outline-danger text-dark" href="/Cliente/Inicio">Atras</button>
