--- a/InternetBanking/PRESENTACION/Views/Shared/_Layout.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" id="coolBar">
         <div class="containers " id="headerBar">
-            @Html.ActionLink("Internet Banking personal", "Index", "Inicio", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Internet Banking personal", "Usuario", "Inicio", new { area = "" }, new { @class = "navbar-brand" })
                 <div class="navbar-header" id="sizeShape">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
