--- a/InternetBanking/PRESENTACION/Views/Cliente/Inicio.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/Inicio.cshtml
@@ -2,9 +2,13 @@
 @{
     ViewBag.Title = "Inicio";
 }
+<fieldset>
+    <legend align="center">→ Cliente ←</legend>
+    <div class="container" align="center">
+        <a type="button" class="btn btn-outline-success bg-light text-dark" href="/Cliente/Cliente">Cuenta de ahorro</a>    
+        <a type="button" class="btn btn-outline-warning bg-light text-dark" href="/Cliente/Tarjeta">Tarjeta de credito</a>  
+        <a type="button" class="btn btn-outline-primary bg-light text-dark" href="/Cliente/Prestamo">Prestamo</a>
+        
+    </div><br />
+</fieldset>
 
-<h2>Cliente</h2>
-
-<a class="btn btn-primary" href="/Cliente/Cliente">Cuenta de ahorro</a>
-<a class="btn btn-primary" href="/Cliente/Tarjeta">Tarjeta de credito</a>
-<a class="btn btn-primary" href="/Cliente/Prestamo">Prestamo</a>
