--- a/InternetBanking/PRESENTACION/Views/Administrador/VistaAhorro.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Administrador/VistaAhorro.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Cuentas de ahorro</h2>
 
-<p>
-    @Html.ActionLink("Crear", "IngresarCuenta")
-</p>
+<a class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Administrador/IngresarCuenta">Nuevo</a>
+<a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Administrador/Inicio">Atras</a>
+
 <table class="table">
     <tr>
         <th>
@@ -32,35 +32,28 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id_usuario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Apellido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cedula)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Numero_cuenta)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Saldo)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id_usuario)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Apellido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cedula)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Numero_cuenta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Saldo)
+            </td>
+        </tr>
+    }
 
 </table>
-<p>
-    @Html.ActionLink("Atras", "Inicio")
-</p>
