--- a/InternetBanking/PRESENTACION/Views/Administrador/VistaTarjetas.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Administrador/VistaTarjetas.cshtml
@@ -6,9 +6,8 @@
 
 <h2>VistaTarjetas</h2>
 
-<p>
-    @Html.ActionLink("Nueva", "CrearTarjeta")
-</p>
+<a class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Administrador/CrearTarjeta">Nueva</a>   
+<a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Administrador/Inicio">Atras</a>
 <table class="table">
     <tr>
         <th>
@@ -35,35 +34,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id_usuario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Numero_Tarjeta)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Monto_Disponible)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Balance_Consumido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Apellido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cedula)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id_usuario)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Numero_Tarjeta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Monto_Disponible)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Balance_Consumido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Apellido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cedula)
+            </td>
+        </tr>
+    }
 
 </table>
