--- a/InternetBanking/PRESENTACION/Views/Cliente/Historialprestamos.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/Historialprestamos.cshtml
@@ -6,9 +6,8 @@
 
 <h2>Historial del prestamo</h2>
 
-<p>
-    @Html.ActionLink("Atras", "Prestamo")
-</p>
+<a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Prestamo">Atras</a>
+
 <table class="table">
     <tr>
         <th>
@@ -26,21 +25,22 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Monto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Concepto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Restante)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fecha)
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Monto)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Concepto)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Restante)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fecha)
+            </td>
+        </tr>
+    }
 
 </table>
