--- a/InternetBanking/PRESENTACION/Views/Cliente/PagoPrestamo.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/PagoPrestamo.cshtml
@@ -1,16 +1,26 @@
 ﻿
 @{
-    ViewBag.Title = "PagoPrestamo";
+    ViewBag.Title = "Pago prestamo";
 }
 
-<h2>PagoPrestamo</h2>
+<fieldset>
+    <legend align="center">→ Pago prestamo ←</legend>
 
-<form action="PagoPrestamo" method="post" enctype="multipart/form-data">
-    <p>Monto <input type="text" name="deposito"></p>
-    <p>
-        <input type="submit" value="Enviar">
-        <input type="reset" value="Borrar">
-        <a class="btn btn-primary" href="/Cliente/Prestamo">Atras</a>
-    </p>
-</form>
-
+    <div class="container" align="center">
+        <form align="center" action="PagoPrestamo" method="post" id="log" enctype="multipart/form-data">
+            <div class="input-group input-group-lg">
+                <div class="input-group-prepend">
+                    <span class="input-group-text text-dark" id="inputGroup-sizing-lg">Monto:</span>
+                </div>
+                <input class="form-control text-dark" type="text" aria-label="Large" name="deposito" aria-describedby="inputGroup-sizing-lg">
+            </div>
+            <div>
+                <div class="form-group">
+                    <button class="btn btn-outline-success bg-light text-dark" id="sizeShape" type="submit" value="Enviar">Enviar</button>  
+                    <button class="btn btn-outline-warning bg-light text-dark" id="sizeShape" type="reset" value="Borrar">Borrar</button>   
+                    <button class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Prestamo">Atras</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</fieldset>
