--- a/InternetBanking/PRESENTACION/Views/Cliente/Prestamo.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/Prestamo.cshtml
@@ -3,11 +3,18 @@
     ViewBag.Title = "Prestamo";
 }
 
-<h2>Prestamo</h2>
-
-<h3> Monto pendiente: $@ViewBag.monto</h3>
-
-
-<a class="btn btn-primary" href="/Cliente/Inicio">Atras</a>
-<a class="btn btn-primary" href="/Cliente/PagoPrestamo">Pagar</a>
-<a class="btn btn-primary" href="/Cliente/Historialprestamos">Historial</a>
+<fieldset>
+    <legend align="center">→ Prestamo ←</legend>
+    <div class="input-group input-group-lg">
+        <div class="input-group-prepend">
+            <span class="input-group-text text-dark" id="inputGroup-sizing-lg">Monto pendiente:</span>
+        </div>
+        <input type="text" class="form-control text-dark" aria-label="Large" aria-describedby="inputGroup-sizing-lg" placeholder="$ @ViewBag.monto DOP" readonly>
+    </div>
+    <br />
+    <div class="form-group" align="center">
+        <button class="btn btn-outline-success bg-light text-dark" id="sizeShape" href="/Cliente/PagoPrestamo">Pagar</button>
+        <button class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Cliente/Historialprestamos">Historial</button>
+        <button class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Inicio">Atras</button>
+    </div>
+</fieldset>
