--- a/InternetBanking/PRESENTACION/Views/Usuario/Inicio.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Usuario/Inicio.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <div class="form-group">
-                    <button class="btn btn-outline-success" id="sizeShape">Iniciar sesion</button>
+                    <button class="btn btn-outline-success bg-light" id="sizeShape">Iniciar sesion</button>
                 </div>
             </div>
         </form>
