--- a/InternetBanking/PRESENTACION/Views/Administrador/Registro.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Administrador/Registro.cshtml
@@ -79,13 +79,9 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+
+            <button type="submit" value="Create"class="btn btn-outline-warning bg-light text-dark" id="sizeShape">Nuevo</button>
+            <a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Administrador/Inicio">Atras</a>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Atras", "Inicio")
-</div>
