--- a/InternetBanking/PRESENTACION/Views/Administrador/VistaClientes.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Administrador/VistaClientes.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "VistaClientes";
 }
 
-<h2>VistaClientes</h2>
+<h2>Clientes</h2>
 
 <a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Administrador/Inicio">Atras</a>
 <table class="table">
