--- a/InternetBanking/PRESENTACION/Views/Administrador/VistaPrestamos.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Administrador/VistaPrestamos.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "VistaPrestamos";
 }
 
-<h2>VistaPrestamos</h2>
+<h2>Prestamos</h2>
 
 <a class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Administrador/Prestamo">Nuevo</a>
 <a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Administrador/Inicio">Atras</a>
