--- a/InternetBanking/PRESENTACION/Views/Administrador/VistaTarjetas.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Administrador/VistaTarjetas.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "VistaTarjetas";
 }
 
-<h2>VistaTarjetas</h2>
+<h2>Tarjetas</h2>
 
 <a class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Administrador/CrearTarjeta">Nueva</a>   
 <a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Administrador/Inicio">Atras</a>
