--- a/InternetBanking/PRESENTACION/Views/Cliente/PagoPrestamo.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/PagoPrestamo.cshtml
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     <button class="btn btn-outline-success bg-light text-dark" id="sizeShape" type="submit" value="Enviar">Enviar</button>  
                     <button class="btn btn-outline-warning bg-light text-dark" id="sizeShape" type="reset" value="Borrar">Borrar</button>   
-                    <button class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Prestamo">Atras</button>
+                    <a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Prestamo">Atras</a>
                 </div>
             </div>
         </form>
