--- a/InternetBanking/PRESENTACION/Views/Cliente/Prestamo.cshtml
+++ b/InternetBanking/PRESENTACION/Views/Cliente/Prestamo.cshtml
@@ -13,8 +13,8 @@
     </div>
     <br />
     <div class="form-group" align="center">
-        <button class="btn btn-outline-success bg-light text-dark" id="sizeShape" href="/Cliente/PagoPrestamo">Pagar</button>
-        <button class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Cliente/Historialprestamos">Historial</button>
-        <button class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Inicio">Atras</button>
+        <a class="btn btn-outline-success bg-light text-dark" id="sizeShape" href="/Cliente/PagoPrestamo">Pagar</a>
+        <a class="btn btn-outline-warning bg-light text-dark" id="sizeShape" href="/Cliente/Historialprestamos">Historial</a>
+        <a class="btn btn-outline-danger bg-light text-dark" id="sizeShape" href="/Cliente/Inicio">Atras</a>
     </div>
 </fieldset>
